updated html files

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>PB Phase2 Project</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <style>img {max-width:100%}
-    .model-dialog {max-width: 90% !important}</style>
+    .model-dialog {max-width: 90% !important}
+    </style>
     <script type="text/javascript">
       $(document).ready(function () {
-            $(".modal-dialog").css("width", "90%");
+            $(".modal-dialog").css({"width":"90%","max-width":"90%"});
       });
       </script>
 </head>
@@ -99,7 +100,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/1"/>
+            <center><img src="http://localhost:5000/query/1"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -125,7 +126,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/2"/>
+            <center><img src="http://localhost:5000/query/2"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -151,7 +152,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/3"/>
+            <center><img src="http://localhost:5000/query/3"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -176,7 +177,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/4"/>
+            <center><img src="http://localhost:5000/query/4"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -201,7 +202,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/5"/>
+            <center><img src="http://localhost:5000/query/5"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -226,7 +227,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/6"/>
+            <center><img src="http://localhost:5000/query/6"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -251,7 +252,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/7"/>
+            <center><img src="http://localhost:5000/query/7"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -276,7 +277,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/8"/>
+            <center><img src="http://localhost:5000/query/8"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -301,7 +302,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/9"/>
+            <center><img src="http://localhost:5000/query/9"/></center>
         </div>
 
         <!-- Modal footer -->
@@ -326,7 +327,7 @@
 
         <!-- Modal body -->
         <div class="modal-body">
-            <img src="http://localhost:5000/query/10"/>
+            <center><img src="http://localhost:5000/query/10"/></center>
         </div>
 
         <!-- Modal footer -->
