--- a/templates/index.html
+++ b/templates/index.html
@@ -30,61 +30,65 @@
       <td> Tweet count from different countries</td>
         <td><a href="#" data-toggle="modal" data-target="#myModal"><img src="graphs.PNG"></a>
         </td>
-         
+
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Top tweeted text and its retweet count</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal1"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
    <tr>
       <th scope="row">3</th>
       <td> Tweet count from different countries</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal2"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">4</th>
       <td> Users with more no of retweets for his tweet</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal3"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">5</th>
       <td> Tweets based on the different league matches</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal4"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">6</th>
       <td> User with more no of followers</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal5"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">7</th>
       <td> Tweets from different Sources</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal6"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">8</th>
       <td> On which Day More Tweets are posted</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal7"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">9</th>
       <td> Tweet count based on language</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal8"><img src="graphs.PNG"></a></td>
-       
+
     </tr>
   <tr>
       <th scope="row">10</th>
       <td> Tweet count on hourly bases</td>
       <td><a href="#" data-toggle="modal" data-target="#myModal9"><img src="graphs.PNG"></a></td>
-       
+    </tr>
+  <tr>
+      <th scope="row">11</th>
+      <td> Generating a word cloud on top 20 text that includes name Football</td>
+      <td><a href="#" data-toggle="modal" data-target="#myModal10"><img src="graphs.PNG"></a></td>
     </tr>
   </tbody>
 </table>
@@ -340,7 +344,28 @@
   </div>
 
 
+<div class="modal" id="myModal10">
+    <div class="modal-dialog">
+      <div class="modal-content">
 
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Generating a word cloud on top 20 text that includes name Football</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+            <center><img src="http://localhost:5000/query/11"/></center>
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </body>
 </html>
-
