--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
       </script>
 </head>
 <body>
+<center><h2>Twitter Analysis on Football Data</h2></center>
 <table class="table">
   <thead class="thead-dark">
     <tr>
